# ecen260-final-project

./: .gitignore  Cargo.toml  README.md  memory.x  redeploy.sh
cortex-m4-binary/: Cargo.toml  README.md  build.rs
cortex-m4-binary/.cargo/: config.toml
cortex-m4-binary/src/: basic_result.rs  lib.rs  main.rs
esp32-binary/: .env.example  Cargo.toml  README.md
esp32-binary/.cargo/: config.toml
esp32-binary/src/: lib.rs  main.rs
src/: main.rs
web-client/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
web-client/src/: App.tsx  constants.ts  index.tsx  longPoll.tsx  main.tsx  useInitialSetup.ts
web-client/src/components/: App.tsx
web-client/src/config/: apiUrl.ts
web-client/src/functions/: longPoll.tsx
web-client/src/styles/: index.css
web-client/src/types/: appError.ts
web-server/: Cargo.toml  README.md
web-server/src/: lib.rs  main.rs  server_context.rs
web-server/src/endpoints/: get_sensor_data.rs  get_settings.rs  get_temperature.rs  mod.rs  post_sensor_data.rs  post_settings.rs  post_temperature.rs  settings_get_endpoint.rs  settings_post_endpoint.rs
