[package]
name = "cortex-m4-binary"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cortex-m4-binary"
test = false
doctest = false
bench = false

[lib]
test = false
doctest = false
bench = false

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.5"
embassy-stm32 = { version = "0.2.0", features = ["stm32l476rg", "unstable-pac", "time-driver-any", "exti"] }
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768", "generic-queue-8"] }
embedded-alloc = "0.6.0"
