cargo-features = ["edition2024"]

[package]
name = "esp32-binary"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

[build-dependencies]
embuild = "0.33"
