cargo-features = ["edition2024"]

[package]
name = "web-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = { version = "0.8.1", features = ["query"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
rand = "0.9.0"
axum-macros = "0.5.0"
